--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Cormorant+Garamond:wght@400;600;700&family=Tangerine:wght@700&display=swap" rel="stylesheet">
     <!-- Styles -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- Feather Icons -->
 
     <script src="https://unpkg.com/feather-icons"></script>
@@ -248,6 +248,6 @@
         </div>
     </div>
 
-    <script src="/js/certificados.js"></script>
+    <script src="js/certificados.js"></script>
 </body>
 </html>
