Atualiza o cabeçalho e rodapé do index.html, adiciona links para redes sociais e altera informações de cliente no certificados.js

--- a/index.html
+++ b/index.html
@@ -29,15 +29,11 @@
     <header class="w-full py-4 px-8 sticky top-0 z-40">
         <div class="max-w-7xl mx-auto flex justify-between items-center">
             <!-- Logo -->
-            <a href="#" class="text-2xl font-bold text-indigo-600">
-                GlauberCertifica
-            </a>
-            <!-- Menu de Navegação -->
-            <nav class="hidden md:flex items-center space-x-6 text-sm font-medium text-slate-600">
-                <a href="#" class="hover:text-indigo-600 transition-colors">Início</a>
-                <a href="#" class="hover:text-indigo-600 transition-colors">Sobre</a>
-                <a href="#" class="hover:text-indigo-600 transition-colors">Contato</a>
-            </nav>
+            <a href="#" class="text-2xl font-bold text-indigo-600 flex items-center gap-2">
+    <i data-feather="file-text"></i>
+    Gera Certificados e Laudos
+</a>
+            
         </div>
     </header>
 
@@ -219,17 +215,20 @@
     <footer class="w-full py-8 px-8 mt-auto bg-slate-800 text-slate-400">
         <div class="max-w-7xl mx-auto flex flex-col sm:flex-row justify-between items-center text-center sm:text-left">
             <p class="text-sm mb-4 sm:mb-0">
-                Desenvolvido por GlauberAlc
-            </p>
+    &copy; 2025 GlauberAlc — Desenvolvido com ❤️
+</p>
+
             <!-- Substitua '#' pelos links das suas redes sociais -->
             <div class="flex space-x-5">
-                <a href="#" aria-label="LinkedIn" class="transition-colors hover:text-white">
-                    <i data-feather="linkedin" class="w-5 h-5"></i>
-                </a>
-                <a href="#" aria-label="GitHub" class="transition-colors hover:text-white">
+               <a href="https://x.com/GlauberAlc" target="_blank" rel="noopener" aria-label="X (Twitter)">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1227" class="w-5 h-5" fill="currentColor">
+        <path d="M714.163 519.284L1160.89 0H1054.3L670.394 442.152L392.174 0H0L466.397 684.146L0 1226.43H106.59L515.648 754.561L823.826 1226.43H1200M165.52 79.0973H349.351L1034.18 1148.33H850.354" />
+    </svg>
+</a>
+                <a href="https://github.com/GlauberAlc/" aria-label="GitHub" class="transition-colors hover:text-white" target="_blank" rel="noopener">
                     <i data-feather="github" class="w-5 h-5"></i>
                 </a>
-                <a href="#" aria-label="Instagram" class="transition-colors hover:text-white">
+                <a href="https://www.instagram.com/glauber.alc/" aria-label="Instagram" class="transition-colors hover:text-white" target="_blank" rel="noopener">
                     <i data-feather="instagram" class="w-5 h-5"></i>
                 </a>
             </div>
